# Instant-A704F-Mouse-Utilities

./: 51-a704f-usb-gaming-mouse.rules  CMakeLists.txt  README.md  SPECS.md  a704f-mouse.desktop  resource.qrc
script/: postinst
src/: DataReference.cpp  custominputhandler.cpp  custominputhandler.h  customkeyboarddialog.cpp  customkeyboarddialog.h  customkeyboarddialog.ui  hidhelper.cpp  hidhelper.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mousesettings.cpp  mousesettings.h  rgbpreview.cpp  rgbpreview.h
